# fastapi_zero

./: .augment-guidelines  .coverage  .gitgnore  .gitignore  README.md  fastapi_zero.db  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.continue/rules/: new-rule.yaml
fastapi_zero/: app.py  main.py  schemas.py
fastapi_zero/core/: config.py  security.py
fastapi_zero/models/: models.py
fastapi_zero/routers/: api.py  pages.py
fastapi_zero/schemas/: schemas.py
htmlcov/: .gitignore  class_index.html  function_index.html  index.html  status.json  z_a8e099c996a2b2ab___init___py.html  z_a8e099c996a2b2ab_app_py.html  z_a8e099c996a2b2ab_schemas_py.html
migrations/: env.py
migrations/versions/: 06c1289009be_create_users_table.py  4b242b9b61d3_add_updated_at_to_user.py
static/css/: styles.css
templates/: dashboard.html  index.html  login.html  logout.html
tests/: conftest.py  test_app.py  test_models.py
