[project]
name = 'fastapi-zero'
version = '0.1.0'
description = ''
authors = [
    {name = 'Rodrigo Pater',email = 'devrod101@outlook.com'}
]
readme = 'README.md'
requires-python = '>=3.13,<4.0'
dependencies = [
    'fastapi[standard] (>=0.115.12,<0.116.0)',
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ['poetry-core>=2.0.0,<3.0.0']
build-backend = 'poetry.core.masonry.api'

[tool.poetry.group.dev.dependencies]
ruff = '^0.11.9'
pytest = '^8.3.5'
pytest-cov = '^6.1.1'
taskipy = '^1.14.1'
jinja2 = "^3.1.6"

[tool.ruff]
line-length = 89
extend-exclude = [
    'migrations',
]

[tool.ruff.lint]
preview = true
select = [
    'E',
    'B',
    'N',
    'F',
    'W',
    'I',
    'PL',
    'PT'
]

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'python -m fastapi_zero.main'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fastapi_zero -vv'
post_test = 'coverage html'
# css = 'tailwindcss -i ./static/css/input.css -o ./static/css/styles.css --watch'
